Server Configuration, cliend header and sign up component

--- a/Djelato/Djelato.Services/Djelato.Services.csproj
+++ b/Djelato/Djelato.Services/Djelato.Services.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Djelato.Common\Djelato.Common.csproj" />
+    <ProjectReference Include="..\Djelato.DataAccess\Djelato.DataAccess.csproj" />
+  </ItemGroup>
 
 </Project>
