--- a/Djelato/Djelato.UnitTests/Djelato.UnitTests.csproj
+++ b/Djelato/Djelato.UnitTests/Djelato.UnitTests.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Djelato.Common\Djelato.Common.csproj" />
+    <ProjectReference Include="..\Djelato.DataAccess\Djelato.DataAccess.csproj" />
+    <ProjectReference Include="..\Djelato.Services\Djelato.Services.csproj" />
+    <ProjectReference Include="..\Djelato.Web\Djelato.Web.csproj" />
+  </ItemGroup>
 
 </Project>
