--- a/Djelato/Djelato.Web/appsettings.json
+++ b/Djelato/Djelato.Web/appsettings.json
@@ -1,8 +1,19 @@
 {
+  "MongoConnection": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "Djelato"
+  },
+
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Microsoft": "Information"
     }
   },
+
+  "JWTSettings": {
+    "Secret": "0d5b3235a8b403c3dab9c3f4f65c07fcalskd234n1k41230"
+  },
+
   "AllowedHosts": "*"
 }
