Add new user function server implementation

--- a/Djelato/Djelato.Services/Djelato.Services.csproj
+++ b/Djelato/Djelato.Services/Djelato.Services.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Djelato.Common\Djelato.Common.csproj" />
     <ProjectReference Include="..\Djelato.DataAccess\Djelato.DataAccess.csproj" />
   </ItemGroup>
