--- a/Djelato/Djelato.DataAccess/Djelato.DataAccess.csproj
+++ b/Djelato/Djelato.DataAccess/Djelato.DataAccess.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Djelato.Common\Djelato.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Logs\" />
+  </ItemGroup>
+
 </Project>
