--- a/Djelato/Djelato.DataAccess/Djelato.DataAccess.csproj
+++ b/Djelato/Djelato.DataAccess/Djelato.DataAccess.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.9.2" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
   </ItemGroup>
 
   <ItemGroup>
