--- a/Djelato/Djelato.Web/appsettings.json
+++ b/Djelato/Djelato.Web/appsettings.json
@@ -11,8 +11,21 @@
     }
   },
 
+  "EmailSettings": {
+    "MailServer": "smtp.gmail.com",
+    "MailPort": 587,
+    "SenderName": "Djelato administration",
+    "Sender": "a.kulgeiko@vironit.co.uk",
+    "Password": "10052019kan"
+  },
+
   "JWTSettings": {
     "Secret": "0d5b3235a8b403c3dab9c3f4f65c07fcalskd234n1k41230"
+  },
+
+  "RedisConnection": {
+    "Host": "127.0.0.1",
+    "Port": "6379"
   },
 
   "AllowedHosts": "*"
