Add random generator, Starting reailize pattern Decorator, Add phon nmber field

--- a/Djelato/Djelato.Web/appsettings.json
+++ b/Djelato/Djelato.Web/appsettings.json
@@ -15,8 +15,8 @@
     "MailServer": "smtp.gmail.com",
     "MailPort": 587,
     "SenderName": "Djelato administration",
-    "Sender": "a.kulgeiko@vironit.co.uk",
-    "Password": "10052019kan"
+    "Sender": "djelatotest@gmail.com",
+    "Password": "Djelato123"
   },
 
   "JWTSettings": {
