--- a/DjelatoWebClient/package.json
+++ b/DjelatoWebClient/package.json
@@ -11,29 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.8",
-    "@angular/cdk": "~8.2.2",
+    "@angular/animations": "^8.2.12",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
     "@angular/forms": "~8.2.8",
-    "@angular/material": "^8.2.2",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
+    "ngx-toastr": "^11.1.2",
+    "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.6",
-    "@angular/cli": "~8.3.6",
-    "@angular/compiler-cli": "~8.2.8",
+    "@angular/cli": "^8.3.16",
+    "@angular/compiler-cli": "^8.2.12",
     "@angular/language-service": "~8.2.8",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
