--- a/Djelato/Djelato.Web/appsettings.json
+++ b/Djelato/Djelato.Web/appsettings.json
@@ -4,13 +4,6 @@
     "Database": "Djelato"
   },
 
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Microsoft": "Information"
-    }
-  },
-
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
     "MailPort": 587,
@@ -19,14 +12,24 @@
     "Password": "Djelato123"
   },
 
-  "JWTSettings": {
-    "Secret": "0d5b3235a8b403c3dab9c3f4f65c07fcalskd234n1k41230"
-  },
-
   "RedisConnection": {
     "Host": "127.0.0.1",
     "Port": "6379"
   },
+
+  "JWTSettings": {
+    "Secret": "0d5b3235a8b403c3dab9c3f4f65c07fcalskd234n1k41230",
+    "SchemaName": "JwtBearer"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug"
+    },
+    "NLog": {
+      "IncludeScopes": true
+    }
+  }, 
 
   "AllowedHosts": "*"
 }
