--- a/Djelato/Djelato.Web/Djelato.Web.csproj
+++ b/Djelato/Djelato.Web/Djelato.Web.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Djelato.Services\Djelato.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Avatars\" />
+  </ItemGroup>
+
 </Project>
